--- a/index.html
+++ b/index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz Game</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
 <body>
-    <h1>This is my project 1</h1>
+    <div class="continue-game">
+        <p>Do you want to continue the game?</p>
+        <div id="yes">Yes</div>
+        <div id="no">No</div>
+    </div>
+    <div class="container">
+        <img src="imgs/quiz-logo.png" />
+        <div class="score">
+            <div class="player-score">
+                <span id="player-1-score"></span>
+                001 
+            </div>
+            <div class="player-score">
+                <span id="player-2-score"></span>
+                002
+            </div>
+        </div>
+        <div id="current-player"></div>
+        <div id="question"></div>
+        <ul>
+            <li id="a"></li>
+            <li id="b"></li>
+            <li id="c"></li>
+            <li id="d"></li>
+        </ul>
+    </div>
 </body>
 </html>
