--- a/index.html
+++ b/index.html
@@ -12,33 +12,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;700&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="continue-game">
-        <p>Do you want to continue the game?</p>
-        <div id="yes">Yes</div>
-        <div id="no">No</div>
+        <h1>Do you want to continue the game?</h1>
+        <div class="yes-or-no">
+            <div id="yes">Yes</div>
+            <div id="no">No</div>
+        </div>
     </div>
     <div class="container">
         <img src="imgs/quiz-logo.png" />
         <div class="score">
-            <div class="player-score">
-                <span id="player-1-score"></span>
-                001 
+            <div class="player-1">
+                Player 001: <span id="player-1-score"></span>
             </div>
-            <div class="player-score">
-                <span id="player-2-score"></span>
-                002
+            <div class="player-2">
+                Player 002: <span id="player-2-score"></span>
             </div>
         </div>
         <div id="current-player"></div>
-        <div id="question"></div>
         <ul>
+            <div id="question"></div>
             <li id="a"></li>
             <li id="b"></li>
             <li id="c"></li>
             <li id="d"></li>
         </ul>
     </div>
+    <div class="winner">
+        <span id="winning-player"></span>
+        <div id="play-again">Play Again</div>
+    </div>
+    <audio autoplay preload='auto' loop id="myAudio">
+        <source src="music/squid.mp3" type="audio/mpeg" >
+    </audio>
+    <div id="mute">Mute</div>
 </body>
 </html>
